update on hotfix

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <tr>
               <th scope="col">Page</th>
               <th scope="col">Keyword</th>
-              <th scope="col">Email</th>
+              <th scope="col">Email Address</th>
               <th scope="col">Found Record</th>
               <th>Status</th>
             </tr>
